Assignment3/1405079/y.output
Terminals unused in grammar

   DO
   SWITCH
   DEFAULT
   BREAK
   CASE
   CONTINUE
   SINGLECOM
   MULTICOM


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON

    8 $@1: %empty

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier
   14               | %empty

   15 $@2: %empty

   16 compound_statement: LCURL $@2 statements RCURL

   17 $@3: %empty

   18 compound_statement: LCURL $@3 RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement ELSE statement
   35          | WHILE LPAREN expression RPAREN statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSINOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor

   55 factor: variable
   56       | ID LPAREN argument_list RPAREN
   57       | LPAREN expression RPAREN
   58       | CONST_INT
   59       | CONST_FLOAT
   60       | CONST_CHAR
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: argument_list COMMA logic_expression
   64              | logic_expression
   65              | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 33 34
FOR (259) 32
DO (260)
INT (261) 20
FLOAT (262) 21
VOID (263) 22
SWITCH (264)
DEFAULT (265)
ELSE (266) 34
WHILE (267) 35
BREAK (268)
RETURN (269) 37
CASE (270)
CONTINUE (271)
PRINTLN (272) 36
CONST_INT (273) 24 26 58
CONST_FLOAT (274) 59
CONST_CHAR (275) 60
ID (276) 7 9 10 12 23 24 25 26 36 40 41 56
ADDOP (277) 49 52
MULOP (278) 51
INCOP (279) 61
DECOP (280) 62
RELOP (281) 47
ASSINOP (282) 43
LOGICOP (283) 45
NOT (284) 53
LPAREN (285) 7 9 32 33 34 35 36 56 57
RPAREN (286) 7 9 32 33 34 35 36 56 57
LCURL (287) 16 18
RCURL (288) 16 18
LTHIRD (289) 24 26 41
RTHIRD (290) 24 26 41
COMMA (291) 10 11 23 24 63
SEMICOLON (292) 7 19 36 37 38 39
SINGLECOM (293)
MULTICOM (294)
only_if (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
start (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3, on right: 1 2
unit (44)
    on left: 4 5 6, on right: 2 3
func_declaration (45)
    on left: 7, on right: 5
func_definition (46)
    on left: 9, on right: 6
$@1 (47)
    on left: 8, on right: 9
parameter_list (48)
    on left: 10 11 12 13 14, on right: 7 9 10 11
compound_statement (49)
    on left: 16 18, on right: 9 31
$@2 (50)
    on left: 15, on right: 16
$@3 (51)
    on left: 17, on right: 18
var_declaration (52)
    on left: 19, on right: 4 29
type_specifier (53)
    on left: 20 21 22, on right: 7 9 10 11 12 13 19
declaration_list (54)
    on left: 23 24 25 26, on right: 19 23 24
statements (55)
    on left: 27 28, on right: 16 28
statement (56)
    on left: 29 30 31 32 33 34 35 36 37, on right: 27 28 32 33 34 35
expression_statement (57)
    on left: 38 39, on right: 30 32
variable (58)
    on left: 40 41, on right: 43 55 61 62
expression (59)
    on left: 42 43, on right: 32 33 34 35 37 39 41 57
logic_expression (60)
    on left: 44 45, on right: 42 43 63 64
rel_expression (61)
    on left: 46 47, on right: 44 45
simple_expression (62)
    on left: 48 49, on right: 46 47 49
term (63)
    on left: 50 51, on right: 48 49 51
unary_expression (64)
    on left: 52 53 54, on right: 50 51 52 53
factor (65)
    on left: 55 56 57 58 59 60 61 62, on right: 54
argument_list (66)
    on left: 63 64 65, on right: 56 63


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   20 type_specifier: INT .

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT .

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID .

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN $@1 compound_statement
   19 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN $@1 compound_statement
   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 14

   19 var_declaration: type_specifier declaration_list . SEMICOLON
   23 declaration_list: declaration_list . COMMA ID
   24                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN $@1 compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 14 (parameter_list)

    parameter_list  go to state 19
    type_specifier  go to state 20


State 16

   26 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 17

   23 declaration_list: declaration_list COMMA . ID
   24                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

   19 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 19 (var_declaration)


State 19

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@1 compound_statement
   10 parameter_list: parameter_list . COMMA type_specifier ID
   11               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 23
    COMMA   shift, and go to state 24


State 20

   12 parameter_list: type_specifier . ID
   13               | type_specifier .

    ID  shift, and go to state 25

    $default  reduce using rule 13 (parameter_list)


State 21

   26 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 26


State 22

   23 declaration_list: declaration_list COMMA ID .
   24                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 27

    $default  reduce using rule 23 (declaration_list)


State 23

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@1 compound_statement

    SEMICOLON  shift, and go to state 28

    $default  reduce using rule 8 ($@1)

    $@1  go to state 29


State 24

   10 parameter_list: parameter_list COMMA . type_specifier ID
   11               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 30


State 25

   12 parameter_list: type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 26

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 27

   24 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 31


State 28

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 29

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 32

    compound_statement  go to state 33


State 30

   10 parameter_list: parameter_list COMMA type_specifier . ID
   11               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 34

    $default  reduce using rule 11 (parameter_list)


State 31

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 35


State 32

   16 compound_statement: LCURL . $@2 statements RCURL
   18                   | LCURL . $@3 RCURL

    RCURL     reduce using rule 17 ($@3)
    $default  reduce using rule 15 ($@2)

    $@2  go to state 36
    $@3  go to state 37


State 33

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 34

   10 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 35

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 36

   16 compound_statement: LCURL $@2 . statements RCURL

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 40
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 32
    SEMICOLON    shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 37

   18 compound_statement: LCURL $@3 . RCURL

    RCURL  shift, and go to state 65


State 38

   33 statement: IF . LPAREN expression RPAREN statement
   34          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 66


State 39

   32 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 67


State 40

   35 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 68


State 41

   37 statement: RETURN . expression SEMICOLON

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 69
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 42

   36 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 70


State 43

   58 factor: CONST_INT .

    $default  reduce using rule 58 (factor)


State 44

   59 factor: CONST_FLOAT .

    $default  reduce using rule 59 (factor)


State 45

   60 factor: CONST_CHAR .

    $default  reduce using rule 60 (factor)


State 46

   40 variable: ID .
   41         | ID . LTHIRD expression RTHIRD
   56 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 71
    LTHIRD  shift, and go to state 72

    $default  reduce using rule 40 (variable)


State 47

   52 unary_expression: ADDOP . unary_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 74
    factor            go to state 64


State 48

   53 unary_expression: NOT . unary_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 75
    factor            go to state 64


State 49

   57 factor: LPAREN . expression RPAREN

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 76
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 50

   38 expression_statement: SEMICOLON .

    $default  reduce using rule 38 (expression_statement)


State 51

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 52

   29 statement: var_declaration .

    $default  reduce using rule 29 (statement)


State 53

   19 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 77

    declaration_list  go to state 14


State 54

   16 compound_statement: LCURL $@2 statements . RCURL
   28 statements: statements . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 40
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 32
    RCURL        shift, and go to state 78
    SEMICOLON    shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 79
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 55

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 56

   30 statement: expression_statement .

    $default  reduce using rule 30 (statement)


State 57

   43 expression: variable . ASSINOP logic_expression
   55 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP    shift, and go to state 80
    DECOP    shift, and go to state 81
    ASSINOP  shift, and go to state 82

    $default  reduce using rule 55 (factor)


State 58

   39 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 59

   42 expression: logic_expression .

    $default  reduce using rule 42 (expression)


State 60

   44 logic_expression: rel_expression .
   45                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 44 (logic_expression)


State 61

   46 rel_expression: simple_expression .
   47               | simple_expression . RELOP simple_expression
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 46 (rel_expression)


State 62

   48 simple_expression: term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 48 (simple_expression)


State 63

   50 term: unary_expression .

    $default  reduce using rule 50 (term)


State 64

   54 unary_expression: factor .

    $default  reduce using rule 54 (unary_expression)


State 65

   18 compound_statement: LCURL $@3 RCURL .

    $default  reduce using rule 18 (compound_statement)


State 66

   33 statement: IF LPAREN . expression RPAREN statement
   34          | IF LPAREN . expression RPAREN statement ELSE statement

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 88
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 67

   32 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 50

    expression_statement  go to state 89
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 68

   35 statement: WHILE LPAREN . expression RPAREN statement

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 90
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 69

   37 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 91


State 70

   36 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 92


State 71

   56 factor: ID LPAREN . argument_list RPAREN

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    $default  reduce using rule 65 (argument_list)

    variable           go to state 73
    logic_expression   go to state 93
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64
    argument_list      go to state 94


State 72

   41 variable: ID LTHIRD . expression RTHIRD

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 95
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 73

   55 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 80
    DECOP  shift, and go to state 81

    $default  reduce using rule 55 (factor)


State 74

   52 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 52 (unary_expression)


State 75

   53 unary_expression: NOT unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 76

   57 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 96


State 77

   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 78

   16 compound_statement: LCURL $@2 statements RCURL .

    $default  reduce using rule 16 (compound_statement)


State 79

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 80

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 81

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 82

   43 expression: variable ASSINOP . logic_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 97
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 83

   39 expression_statement: expression SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 84

   45 logic_expression: rel_expression LOGICOP . rel_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 73
    rel_expression     go to state 98
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 85

   49 simple_expression: simple_expression ADDOP . term

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable          go to state 73
    term              go to state 99
    unary_expression  go to state 63
    factor            go to state 64


State 86

   47 rel_expression: simple_expression RELOP . simple_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 73
    simple_expression  go to state 100
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 87

   51 term: term MULOP . unary_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 101
    factor            go to state 64


State 88

   33 statement: IF LPAREN expression . RPAREN statement
   34          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


State 89

   32 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 50

    expression_statement  go to state 103
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 90

   35 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


State 91

   37 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 37 (statement)


State 92

   36 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


State 93

   64 argument_list: logic_expression .

    $default  reduce using rule 64 (argument_list)


State 94

   56 factor: ID LPAREN argument_list . RPAREN
   63 argument_list: argument_list . COMMA logic_expression

    RPAREN  shift, and go to state 106
    COMMA   shift, and go to state 107


State 95

   41 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 108


State 96

   57 factor: LPAREN expression RPAREN .

    $default  reduce using rule 57 (factor)


State 97

   43 expression: variable ASSINOP logic_expression .

    $default  reduce using rule 43 (expression)


State 98

   45 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 45 (logic_expression)


State 99

   49 simple_expression: simple_expression ADDOP term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 49 (simple_expression)


State 100

   47 rel_expression: simple_expression RELOP simple_expression .
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 47 (rel_expression)


State 101

   51 term: term MULOP unary_expression .

    $default  reduce using rule 51 (term)


State 102

   33 statement: IF LPAREN expression RPAREN . statement
   34          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 40
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 32
    SEMICOLON    shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 109
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 103

   32 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 57
    expression         go to state 110
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 104

   35 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 40
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 32
    SEMICOLON    shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 111
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 105

   36 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 112


State 106

   56 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 56 (factor)


State 107

   63 argument_list: argument_list COMMA . logic_expression

    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 113
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 108

   41 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 41 (variable)


State 109

   33 statement: IF LPAREN expression RPAREN statement .
   34          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 114

    $default  reduce using rule 33 (statement)


State 110

   32 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 115


State 111

   35 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 35 (statement)


State 112

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 36 (statement)


State 113

   63 argument_list: argument_list COMMA logic_expression .

    $default  reduce using rule 63 (argument_list)


State 114

   34 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 40
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    CONST_CHAR   shift, and go to state 45
    ID           shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 32
    SEMICOLON    shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 116
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 115

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
